fix t alignment and position

--- a/v6/style.css
+++ b/v6/style.css
@@ -1,3 +1,7 @@
+body {
+  background: #eceee5;
+}
+
 .cards {
   display: flex;
   justify-content: space-around;
@@ -13,10 +17,11 @@
 } */
 
 .cards__single {
+  background: #a64e43;
   display: flex;
   flex-direction: column;
   width: 20%;
-  border: 1px red solid;
+
   border-radius: 16px;
   box-shadow: 0 5px 18px rgba(0, 0, 0, 0.6);
   cursor: pointer;
@@ -29,6 +34,12 @@
 
 .cards__back {
   transform: rotateY(180deg);
+  position: absolute;
+  text-align: center;
+  right: 0;
+  left: 0;
+  top: 10px;
+  color: #20263f;
 }
 .cards__front,
 .cards__back {
@@ -38,19 +49,28 @@
 .cards__single.test {
   transform: rotateY(180deg);
 }
+.cards__single.test .cards__back {
+}
 .cards__front {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
+h2 {
+  margin: 0;
+  text-align: center;
+}
 
+li {
+  line-height: 21px;
+}
 .cards__back {
   display: flex;
   flex-direction: column;
 }
 .cards__front img {
   margin: 0;
-  height: 50%;
+  height: 250px;
 }
 .cards__album {
   font-style: italic;
@@ -81,6 +101,10 @@
   /* height: 250px; */
 }
 
+.cards__artist,
+.cards__album {
+  color: #20263f;
+}
 /* .cards__single .cards__front img {
   object-fit: cover;
   display: block;
